--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport"
 	content="initial-scale=1.0, width=device-width, user-scalable=no" />
+	<script src="js/script.js"</script>
   </head>
 <link href="css\style.css" rel="stylesheet" type="text/css">
 
