--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport"
 	content="initial-scale=1.0, width=device-width, user-scalable=no" />
-	<script src="js/script.js"</script>
   </head>
 <link href="css\style.css" rel="stylesheet" type="text/css">
-
+<body>
     <img src="images/jogo.png" alt="Jogo da Forca" class="center">
     
 	<div class="alinhar">
@@ -54,5 +53,8 @@
 	</div>
     </div>
 			</div>
-	 <div id="forca" class="desenho"></div>
+	<div id="forca" class="desenho"></div>
+</body>
+	<script src="js/script.js">
+	</script>
 </div>
