--- a/index.html
+++ b/index.html
@@ -5,56 +5,52 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport"
 	content="initial-scale=1.0, width=device-width, user-scalable=no" />
-  </head>
+<script type="text/havascript" src="js/script.js"></script>
 <link href="css\style.css" rel="stylesheet" type="text/css">
+</head>
+
 <body>
     <img src="images/jogo.png" alt="Jogo da Forca" class="center">
-    
 	<div class="alinhar">
-			<label class="rotulo">Pergunta:</label>
-			<span id="perguntaAtual" class="pergunta"></span>
+		<label class="rotulo">Pergunta:</label>
+		<span id="perguntaAtual" class="pergunta"></span>
 		</div>
-		<div class="alinhar">
+	<div class="alinhar">
 		<span id="mensagem" class="msg"></span>
-	</div>
-			<div class="alinhar">
+		</div>
+	<div class="alinhar">
 		<button id="bntGeraJogador" class="bnt gerador" type="button" value="Gerar jogador" title="Clique aqui para criar um jogador">Criar Jogador</button>
 		<label class="rotulo">É a vez de:</label>
 		<span id="jogadorGerado" class="selecionado"></span>
 		</div>
 	<div class="parteEscrito">
-
 	<span id="faseAtual" class="desabilitado"></span>
-
 	<span id="numTentativas" class="desabilitado"></span>
 	<div id="perguntas">
 		<div class="preenchimento">
 			<label class="rotulo">Letra: </label>
 			<input id="entradaLetra" type="text" class="entrada" size="1" maxlength="1" title="Informe uma letra" />
 			<button id="bntTentar" class="bnt" type="button" value="Tentar!" title="Clique aqui para usar sua letra">Tentar!</button>
-			<br />
+			<br/>
 			<label class="rotulo">Resposta: </label>
 			<input id="entradaResposta" type="text" class="entrada" title="Informe a resposta" />
 			<button id="bntResponder" class="bnt" type="button" value="Responder!" title="Clique aqui para responder">Responder!</button>
-			<br />
+			<br/>
 			<div id="palavra" class="letras">
 			<span id="letraEscolhida"></span>
-			<br />
+			<br/>
 			<span id="letraErrada"></span>
-			<br />
+			<br/>
 			<span id="respostaInformada"></span>
-			<br />
+			<br/>
 			<span id="resposta"></span>
-			<br />
-			
+			<br/>
 			<button id="bntNovoJogo" class="bnt proximo" type="button" value="Próxima Pergunta" title="Clique aqui para próxima fase">Próxima pergunta</button>
-				
 		</div>
 	</div>
     </div>
 			</div>
 	<div id="forca" class="desenho"></div>
-</body>
-	<script src="js/script.js">
-	</script>
 </div>
+</body>
+</html>
