--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
 <meta name="viewport"
 	content="initial-scale=1.0, width=device-width, user-scalable=no" />
-<script type="text/havascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/script.js"></script>
 <link href="css\style.css" rel="stylesheet" type="text/css">
 </head>
 
