--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta name="viewport"
 	content="initial-scale=1.0, width=device-width, user-scalable=no" />
 <link href="css\style.css" rel="stylesheet" type="text/css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
