--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport"
 	content="initial-scale=1.0, width=device-width, user-scalable=no" />
 <link href="css\style.css" rel="stylesheet" type="text/css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous" type="text/javascript"></script>
 </head>
 
 <body>
